// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package org.interconnection.v2.algos;

//===================================//
//  Protos used in HandshakeRequest  //
//===================================//

message SgbParamsProposal {
  repeated int32 supported_versions = 1;

  // 训练第一棵树时是否仅采用主动参与方的样本列
  // 参见： https://arxiv.org/abs/1901.08755 Completely SecureBoost
  bool support_completely_sgb = 100;

  // 是否启用行采样
  bool support_row_sample_by_tree = 101;

  // 是否启用列采样
  bool support_col_sample_by_tree = 102;
}

//===================================//
//  Protos used in HandshakeResponse //
//===================================//

message SgbParamsResult {
  // 版本号
  int32 version = 1;

  // 迭代次数
  int32 num_round = 2;

  // 树的最大深度
  int32 max_depth = 3;

  // 树训练的行采样率
  double row_sample_by_tree = 4;

  // 树训练的列采样率
  double col_sample_by_tree = 5;

  // 样本分桶的eps参数
  double bucket_eps = 6;

  bool use_completely_sgb = 100;
}
